==> aws/amazon-freertos/vendors/infineon/secure_elements/optiga_trust_x/pal/esp32_freertos/pal_i2c.c <==
#include "optiga/pal/pal_i2c.h"
#include "driver/i2c.h"
#define PAL_I2C_MASTER_TX_BUF_DISABLE   0                /*!< I2C master do not need buffer */
#define PAL_I2C_MASTER_RX_BUF_DISABLE   0                /*!< I2C master do not need buffer */
#define CONFIG_PAL_I2C_INIT_ENABLE 1
#define WRITE_BIT                       I2C_MASTER_WRITE /*!< I2C master write */
#define READ_BIT                        I2C_MASTER_READ  /*!< I2C master read */
#define ACK_CHECK_EN                    0x1              /*!< I2C master will check ack from slave*/
#define ACK_CHECK_DIS                   0x0              /*!< I2C master will not check ack from slave */
#define ACK_VAL                         0x0              /*!< I2C ack value */
#define NACK_VAL                        0x1              /*!< I2C nack value */

pal_status_t pal_i2c_init(const pal_i2c_t* p_i2c_context)
{
	int master_port;
	esp32_i2c_ctx_t* master_ctx;
	i2c_config_t conf;
	
#ifdef CONFIG_PAL_I2C_INIT_ENABLE	
	printf("Initialize pal_i2c_init  ");

	if ((p_i2c_context == NULL) || (p_i2c_context->p_i2c_hw_config == NULL))
		return PAL_STATUS_FAILURE;
	
	master_ctx = (esp32_i2c_ctx_t*)p_i2c_context->p_i2c_hw_config;
	master_port = master_ctx->port;
	
    conf.mode = I2C_MODE_MASTER;
    conf.sda_io_num = master_ctx->sda_io;
    conf.sda_pullup_en = GPIO_PULLUP_ENABLE;
    conf.scl_io_num = master_ctx->scl_io;
    conf.scl_pullup_en = GPIO_PULLUP_ENABLE;
    conf.master.clk_speed = master_ctx->bitrate;
    i2c_param_config(master_port, &conf);
    i2c_driver_install(master_port, conf.mode,
                       PAL_I2C_MASTER_TX_BUF_DISABLE,
                       PAL_I2C_MASTER_RX_BUF_DISABLE, 0);
	
    printf("OK\r\n");
#endif

    return PAL_STATUS_SUCCESS;
}

pal_status_t pal_i2c_write(pal_i2c_t* p_i2c_context,uint8_t* p_data , uint16_t length)
{
    pal_status_t status = PAL_STATUS_FAILURE;
	app_event_handler_t upper_layer_handler;
	int i2c_master_port;
	esp32_i2c_ctx_t* master_ctx;

	gp_pal_i2c_current_ctx = p_i2c_context;

	if ((p_i2c_context == NULL) || (p_i2c_context->p_i2c_hw_config == NULL))
		return status;

	master_ctx = (esp32_i2c_ctx_t*)p_i2c_context->p_i2c_hw_config;
	i2c_master_port = master_ctx->port;

	i2c_cmd_handle_t cmd = i2c_cmd_link_create();

    i2c_master_start(cmd);
    i2c_master_write_byte(cmd, (p_i2c_context->slave_address << 1) | WRITE_BIT, ACK_CHECK_EN);
    i2c_master_write(cmd, p_data, length, ACK_CHECK_EN);
    i2c_master_stop(cmd);
    esp_err_t ret = i2c_master_cmd_begin(i2c_master_port, cmd, 1000 / portTICK_RATE_MS);
    i2c_cmd_link_delete(cmd);

	upper_layer_handler = (app_event_handler_t)gp_pal_i2c_current_ctx->upper_layer_event_handler;

	if (ret == ESP_OK) {
		upper_layer_handler(p_i2c_context->upper_layer_ctx , PAL_I2C_EVENT_SUCCESS);
		status = PAL_STATUS_SUCCESS;
	} else {
        upper_layer_handler(p_i2c_context->upper_layer_ctx , PAL_I2C_EVENT_ERROR);
	}

    return status;
}

pal_status_t pal_i2c_read(pal_i2c_t* p_i2c_context , uint8_t* p_data , uint16_t length)
{
    pal_status_t status = PAL_STATUS_FAILURE;
    app_event_handler_t upper_layer_handler;
	int i2c_master_port;
	esp32_i2c_ctx_t* master_ctx;

	gp_pal_i2c_current_ctx = p_i2c_context;

	if (length == 0)
        return status;
	
	if ((p_i2c_context == NULL) || (p_i2c_context->p_i2c_hw_config == NULL))
		return status;
	


	master_ctx = (esp32_i2c_ctx_t*)p_i2c_context->p_i2c_hw_config;
	i2c_master_port = master_ctx->port;
	
    i2c_cmd_handle_t cmd = i2c_cmd_link_create();
    i2c_master_start(cmd);
    i2c_master_write_byte(cmd, ( p_i2c_context->slave_address << 1 ) | READ_BIT, ACK_CHECK_EN);
    if (length > 1) {
        i2c_master_read(cmd, p_data, length - 1, ACK_VAL);
    }
    i2c_master_read_byte(cmd, p_data + length - 1, NACK_VAL);
    i2c_master_stop(cmd);
    esp_err_t ret = i2c_master_cmd_begin(i2c_master_port, cmd, 1000 / portTICK_RATE_MS);
    i2c_cmd_link_delete(cmd);
	
    upper_layer_handler = (app_event_handler_t)gp_pal_i2c_current_ctx->upper_layer_event_handler;
	
	if (ret == ESP_OK) {
		upper_layer_handler(p_i2c_context->upper_layer_ctx , PAL_I2C_EVENT_SUCCESS);
		status = PAL_STATUS_SUCCESS;
	} else {
        upper_layer_handler(p_i2c_context->upper_layer_ctx , PAL_I2C_EVENT_ERROR);
	}

    return status;
}
